--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pulse-frontend",
+  "name": "Pulse-rep",
   "version": "1.0.0",
   "scripts": {
     "dev": "vite",
@@ -11,13 +11,12 @@
     "framer-motion": "^12.19.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^7.6.3"
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.6.0",
     "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.24",
-    "tailwindcss": "^3.3.2",
-    "vite": "^7.0.0"
+    "tailwindcss": "^3.4.3",
+    "vite": "^5.1.4"
   }
 }
