--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,8 @@
-[dev]
-  command = "npm run dev"
-  port = 5173
-  targetPort = 5000
+[build]
+  command = "npm run build"
+  publish = "dist"
 
 [[redirects]]
-  from = "/oauth2callback"
-  to = "http://localhost:5000/callback"
+  from = "/*"
+  to = "/index.html"
   status = 200
