Save untracked and staged changes before rebase

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ dist/
 
 # Local Netlify folder
 .netlify
+backend/client_secret.json
+backend/client_secret.json
+client_secret.json
+backend/client_secret.json
